Fix flexbox scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ footer div .flexbox-container{
     border-radius: var(--section-border-radius);
     height: 600px;
     background-color: #CC99A2;
-    overflow: auto;
+    overflow: hidden;
     width: clamp(750px, 50%, 1000px);
     margin: auto;
     position: relative;
